# google-alert-rss-proxy

./: .gitignore  README.md  deploy.sh  pyproject.toml
src/: google_alert_feed.py  main.py  requirements.txt  utils.py
src/conf/: blacklist.json
src/templates/: index.html
tests/: test_google_alert_feed.py  test_main.py  test_utils.py
